# DzenQ

./: .gitignore  KERI-CONTEXT.md  KERI.md  LICENSE  README.md  __init__.py  accept.py  appreciate.py  cli.py  debug_said.py  keri_example.py  main.py  pyproject.toml  requirements.txt  tgbot  tgbot.py
adapter/: __init__.py
adapter/keri/: certificate.py  identity.py  windows_fix.py
doc/: Specification.md
keri/: certificate.py
keriac/: __init__.py  acdc.py  aid.py  base.py  const.py  crypto.py  discovery.py  domain.py  event.py  event_log.py  identifier.py  identity.py  kel.py  presentation.py  registry.py  said.py  schema.py  serialize.py  types.py
keriac/agents/: __init__.py  contact.py  identity.py
keriac/documents/: __init__.py  contact.py  credential.py  presentation.py  schema.py
keriac/logbook/: __init__.py  keys.py  transactions.py
keriac/logbook/entries/: event.py
keriac/transport/: serialize.py
naive/: create_identity.py  issue_thank_you.py  receive_and_acknowledge.py  requirements.txt
scripts/: create_identity.py  issue_certificate.py  list_certificates.py  remove_identity.py  rotate_keys.py  verify_certificate.py
tests/: test_acdc.py  test_const_properties.py  test_crypto.py  test_delegation.py  test_e2e.py  test_events.py  test_kel.py  test_oobi.py  test_presentation.py  test_rotation.py  test_said.py  test_schema.py  test_serialization.py  test_tel.py
